added comments to explain code, corrected questions array to add correct as its own key:value pair, removed trial.js notes, added score, laid out next steps for code

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <nav>
         <!--navbar to navigate to highscores and display time()-->
         <button>High Scores</button>
-        <div>
-          Timer: <span id="timer"><!--time remaining--></span>
+        <div id="timer">
+          Timer: <span id="timeLeft"><!--time remaining--></span>
         </div>
       </nav>
     </header>
@@ -33,6 +33,7 @@
           <button class="option">C.</button>
           <button class="option">D.</button>
         </div>
+        <div class="message" id="message">Here your message will appear!</div>
       </section>
     </main>
 
