removed placeholder text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <button class="option">C.</button>
           <button class="option">D.</button>
         </div>
-        <div class="message" id="message">Here your message will appear!</div>
+        <div class="message" id="message"></div>
       </section>
 
       <section class="hidden" id="game-over">
