made sure spelling and punctuation was ok

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
           />
           <button id="save-button">Submit</button>
         </form>
-        <a href="index.html"><button class="return-to-game-button">return to game</button></a>
+        <a href="index.html"><button class="return-to-game-button">Return to game</button></a>
       </section>
 
       <section class="hidden" id="hiscore-page">
         <h2>Previous Score:</h2>
         <div id="score-history"></div>
-        <a href="index.html"><button class="return-to-game-button">return to game</button></a>
+        <a href="index.html"><button class="return-to-game-button">Return to game</button></a>
       </section>
     </main>
 
